@@ -1,3 +1,7 @@
+2011-07-23  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/integration/kde.jl: added suspend and hibernate
+	entries for KDE4
+
 2011-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/windows.jl: fixed warping to a shaded window
 
